# effectivec

./: CMakeLists.txt  excercises.c  excercises.h  main  main.c  tags
algorithms/: bubble.c  factorial.c  factorial.h  fibbonacci.c  quicksort.c  quicksort.h  reverse_linked.c  reverse_linked.h
excercises/: bubble.c  bubble.h  casting.c  casting.h  count.c  count.h  factorial.c  factorial.h  fclassification.c  fclassification.h  fibbonacci.c  fibbonacci.h  file.c  file.h  locale.c  locale.h  memory_management.c  memory_management.h  wrapflow.c  wrapflow.h
scripts/: build.sh
